--- a/styles.css
+++ b/styles.css
@@ -8,14 +8,14 @@ body {
 
 
 header {
-    border-bottom: solid 2px rgb(42, 122, 228);
+    border-bottom: solid 2px rgba(51, 228, 42, 0.762);
     padding: 20px;
     font-size: 32px;
-    color: rgb(42, 122, 228);
+    color: rgb(16, 232, 92);
 }
 
 .chamada {
-    background: rgb(184,156,213);
+    background: rgb(168, 179, 21);
     padding-bottom: 80px;
     padding-top: 80px;
     display: flex;
